--- a/firebase.json
+++ b/firebase.json
@@ -5,7 +5,7 @@
     "rewrites": [
       {
         "source": "/tracker/**",
-        "destination": "/index.html"
+        "destination": "/tracker/index.html"
       }
     ]
   }
