removed lovable instances

--- a/firebase.json
+++ b/firebase.json
@@ -4,8 +4,8 @@
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
-        "source": "/tracker/**",
-        "destination": "/tracker/index.html"
+        "source": "/**",
+        "destination": "/index.html"
       }
     ]
   }
